typescript/checker/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration5.ts.stderr
error: Unexpected eof
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration5.ts:1:7
  |
1 | var a,
  |       ^

